--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://selenajwilliams.github.io/accessible-components/public/index.html">
+<meta http-equiv="refresh" content="0; url=https://selenajwilliams.github.io/accessible-components/">
